--- a/data/sources/microsoft-events-prague.yaml
+++ b/data/sources/microsoft-events-prague.yaml
@@ -6,8 +6,33 @@ series:
     image: https://secure.meetupstatic.com/s/img/286374644891845767035/logo/meetup-logo-script-1200x630.png
   events:
   - meetupcom:
-      meta_description: 'Wed, Sep 22, 2021, 5:00 PM: Returning to work after Maternity or Paternity leave can be a challenge, and you shouldn''t have to make a choice between getting the most out of your home life, and making '
-      og_title: TechBaby Prague (Virtual Event)
+      meta_description: 'Returning to work after Maternity or Paternity leave can be a challenge, and you shouldn''t have to make a choice between getting the most out of your home life, and making strides forward in your career. Why not do both?
+
+
+        TechBaby is a virtual event that we are hosting with special guest speakers from across Microsoft to tackle these important issues and others, including Foster and Adoptive care parental leave.
+
+
+        You can sign up for the event here whilst we still have space, it is not one to be missed! Registration: https://lnkd.in/ed9KdXc7
+
+
+        Speakers:
+
+        - Scott Van Vliet (Corporate Vice President, Intelligent Communications)
+
+        - Natallia Reshytnik (Principal Group Engineering Manager)
+
+        - Pavel Horák (Principal Software Engineering Manager)
+
+        - Ela Mościcka (Software Engineer)
+
+        - Kateřina Čížková (Software Engineer)
+
+
+        Join our 60 minutes livestream event to meet our speakers and get inspired by what they have to say.
+
+
+        RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://lnkd.in/ed9KdXc7 (Registration is free)'
+      og_title: TechBaby Prague (Virtual Event), Wed, Sep 22, 3:00 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/a/1/4/4/600_498821284.jpeg
       url: https://www.meetup.com/Microsoft-Events-in-Prague/events/280766905/
       ical:
@@ -31,8 +56,21 @@ series:
         dtstart: 2021-09-22 17:00:00+02:00
         dtend: 2021-09-22 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Dec 3, 2019, 6:30 PM: RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registration is free.)Hello all'
-      og_title: Office 365 Champions & User Group Connection in Prague
+      meta_description: 'RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registration is free.)
+
+
+        Hello all, anyone from the Office 365 Champion Community here?
+
+
+        We are happy to invite you to the Office 365 Champions & User Group Connection in Prague! Please join us on Tuesday, December 3rd at 18:30 in The Prague Congress Centre, 5. kvetna 1640/65, 140 00 Prague 4. Look for a Club H on the 1st floor.
+
+
+        Come join us for a short presentation, great conversation, and refreshments. You''ll hear from Karuana Gatimu, a leader in the Office 365 Champions community for business users, IT Professionals and aspiring adoption professionals. Karuana is an
+        experienced service adoption leader who works for the Microsoft Teams Engineering Group leading the customer insights & community outreach teams.
+
+
+        See you soon!'
+      og_title: Office 365 Champions & User Group Connection in Prague, Tue, Dec 3, 5:30 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/8/c/1/2/600_487115858.jpeg
       url: https://www.meetup.com/Microsoft-Events-in-Prague/events/266913890/
       ical:
@@ -56,8 +94,36 @@ series:
         dtstart: 2019-12-03 18:30:00+01:00
         dtend: 2019-12-03 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Sep 26, 2019, 5:20 PM: Save the date and register for our upcoming startup community event.We are excited to invite you to our second Prague Startup Day organized by Microsoft. You can look forwa'
-      og_title: Prague Startup Day 2019
+      meta_description: 'Save the date and register for our upcoming startup community event.
+
+
+        We are excited to invite you to our second Prague Startup Day organized by Microsoft. You can look forward to the mix of the best inspirational AI stories during panel discussion, meeting and greeting our amazing mentors who can consult your project
+        and networking during BBQ on Microsoft office rooftop!
+
+        #MicrosoftForStartups
+
+
+        Note: RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/praguestartupday
+
+
+        Agenda:
+
+
+        17:20 - 17:50 | Registration
+
+        17:50 - 18:00 | Microsoft loves AI startups
+
+        18:00 - 19:00 | Panel discussion: Good AI Stories
+
+        19:00 - 19:10 | Coffee Break
+
+        19:10 - 20:00 | Meet & Greet mentors
+
+        20:00 - 21:00 | BBQ & Networking
+
+
+        For more information about how Microsoft gives loves to startups visit: https://startups.microsoft.com/en-us/'
+      og_title: Prague Startup Day 2019, Thu, Sep 26, 3:20 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/e/2/9/7/600_484438007.jpeg
       url: https://www.meetup.com/Microsoft-Events-in-Prague/events/264424128/
       ical:
@@ -81,8 +147,26 @@ series:
         dtstart: 2019-09-26 17:20:00+02:00
         dtend: 2019-09-26 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Jun 17, 2019, 4:30 PM: The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below.Summer is here and it''s time to slow dow'
-      og_title: Startup BBQ 2019 on rooftop
+      meta_description: 'The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below.
+
+
+        Summer is here and it''s time to slow down and enjoy good weather and food. Startup BBQ event is a meeting for people who are on the same wave, in our case on the same roof - startups, ISVs, small businesses, investors, CEOs, CTOs, innovation enthusiasts,
+        simply anyone looking for new inspiration.
+
+
+        What can you expect? Talking from the CEO for CEE, one of the biggest innovative hubs on the planet - Tel Aviv, Israel. Furthermore, you can learn "How to Make $ 4million in 12 Months" or "How You Can Overcome the Gap Through a Strong Partnership".
+
+        Grab a cold beer and talk to the mentors, they can give you tips on solving your problem or just get to know new people.
+
+
+        You can look forward to the mix of the best so don''t miss this event as food and drinks are limited. Put 17.6. 2019 at 4:30 pm to your calendar!
+
+
+        Official register here (please sign-up there otherwise we cannot guarantee your place.: https://www.microsoftevents.com/profile/form/index.cfm?PKformID=0x6987384abcd
+
+
+        PS: Event is held in Czech with some keynotes.'
+      og_title: Startup BBQ 2019 on rooftop, Mon, Jun 17, 2:30 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/9/2/1/7/600_482077399.jpeg
       url: https://www.meetup.com/Microsoft-Events-in-Prague/events/261799526/
       ical:
