--- a/data/sources/mlmu-brno.yaml
+++ b/data/sources/mlmu-brno.yaml
@@ -6,8 +6,21 @@ series:
     image: https://secure.meetupstatic.com/photos/event/7/6/6/f/600_456450319.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Jul 21, 2021, 6:00 PM: Little update: We arranged small refreshments on the grill!Dear friends,After a long time (almost a year!), let''s meet in person! Usually, we don''t organize meetups in summ'
-      og_title: MLMU Beer & grill & chat
+      meta_description: 'Little update: We arranged small refreshments on the grill!
+
+
+        Dear friends,
+
+
+        After a long time (almost a year!), let''s meet in person! Usually, we don''t organize meetups in summer, but we hope you are as eager to meet with other machine learning enthusiasts as we are. This time there won''t be any talk because we think
+        it would be redundant. Let''s just chat about our projects, plans and hopes for the future. It will also be a good time for some feedback for organizers or tips for the upcoming MLMU season.
+
+
+        We have reserved outside seating at Živo u Palečka again. They have a grill which is also reserved for us!
+
+
+        Join us on Wednesday, 21th!'
+      og_title: MLMU Beer & grill & chat, Wed, Jul 21, 4:00 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/7/6/6/f/600_456450319.jpeg
       url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/279295286/
       ical:
@@ -30,8 +43,30 @@ series:
         dtstart: 2021-07-21 18:00:00+02:00
         dtend: 2021-07-21 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jun 24, 2021, 7:00 PM: The artistic use of AI challenges some of the cornerstones of the modern Western concepts of art and creativity. The artist who works with AI blurs the lines that tradition'
-      og_title: 'D<AI>DALOS – Post-Human Creativity: The Use of AI in Art'
+      meta_description: 'The artistic use of AI challenges some of the cornerstones of the modern Western concepts of art and creativity. The artist who works with AI blurs the lines that traditionally defined the roles played by makers and their tools.
+        To what degree can we call AI-generated works as the product of genuine creativity? By inviting contemporary artists experimenting with AI and experts in the field, we will address these and other questions that are redefining the current understanding
+        of what art is and the purpose of human ingenuity.
+
+        __
+
+
+        Filippo Lorenzin is an art writer, teacher and media theorist based in Italy. Currently a curator of MoCDA - Museum of Contemporary Digital Art, he has been working in the fields of contemporary art and digital culture for over a decade, collaborating
+        with international venues, including Goethe Institute, Paris College of Art and Furtherfield. His articles on contemporary digital culture and art history are regularly featured in international art magazines, including Flash Art, Hyperallergic
+        and Motherboard. His research focuses on digital culture and art in the broader context of art history. He worked on exhibitions, workshops and webinars aimed at developing a critical approach towards new media and online platforms that go beyond
+        the “new media art” niche.
+
+
+        Garrett Lynch is an artist, lecturer, curator and theorist. His work explores networks within an artistic context; the spaces between artist, artworks and audience as a means, site and context for artistic initiation, creation and discourse. He
+        is currently Professor of Contemporary Art Practices / Experimental Media Arts at Srishti Institute of Art, Design & Technology, Bangalore in India.
+
+
+        Paul Mouginot is an artist, engineer and founder of the artistic collective aurèce vettier, whose aim is to understand how relevant and meaningful interactions with machines and algorithms can be achieved, in order to push the boundaries of creative
+        processes.
+
+
+        Iskra Velitchkova is a Bulgarian artist currently based in Madrid. Her work explores the present and potential interactions between humans and machines and how instead of making technology more human, this relationship can push us to understand
+        our limits better. After a proven record in the tech and artificial intelligence industry as a visual thinker, Iskra decided to apply her knowledge and experience at the service of her own research.'
+      og_title: 'D<AI>DALOS – Post-Human Creativity: The Use of AI in Art, Thu, Jun 24, 5:00 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/c/e/3/6/600_496912790.jpeg
       url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/278824055/
       ical:
@@ -55,8 +90,20 @@ series:
         dtstart: 2021-06-24 19:00:00+02:00
         dtend: 2021-06-24 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Jun 7, 2021, 7:30 PM: We invite you to the lecture From Automation to Intelligence: The Long History of AI by Nathan Ensmenger from the Indiana University. This is the opening lecture of a discus'
-      og_title: 'D<AI>DALOS – From Automation to Intelligence: The Long History of AI'
+      meta_description: 'We invite you to the lecture From Automation to Intelligence: The Long History of AI by Nathan Ensmenger from the Indiana University. This is the opening lecture of a discussion series called DDALOS co-organized by the AI Center
+        FEE CTU and our friends at Machine learning Meetups (MLMU). Through six lectures planned for the 2021, we wish to bring together scientists, students and experts from various fields to tackle the questions of AI research and social responsibility.
+        Specifically, the cycle will cover the following topics related to AI: creativity, journalism, fairness, sustainability, transhumanism and this opening lecture on the history of AI.
+
+
+        Event description
+
+        Although the history of artificial intelligence is full of claims that the field is just on the brink of a revolutionary transformation, the ideas and technologies at the center of the discipline have a surprisingly long history. By situating the
+        history of the field within the larger context of the history of work, automation, computation, and philosophy, we can provide both insights into recent developments in artificial intelligence and a new perspective on some of the ethical, political,
+        and economic issues posed by these developments.
+
+
+        More info: https://www.aic.fel.cvut.cz/events/from-automation-to-intelligence-the-long-history-of-ai'
+      og_title: 'D<AI>DALOS – From Automation to Intelligence: The Long History of AI, Mon, Jun 7, 5:30 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/d/4/a/5/600_496614437.jpeg
       url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/278523645/
       ical:
@@ -105,8 +152,27 @@ series:
         dtstart: 2021-05-26 18:00:00+02:00
         dtend: 2021-05-26 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 14, 2021, 6:00 PM: Přednáška bude online na YouTube a v češtině!Výběr vhodného nástroje pro provoz ML modelů je jedním z kritických rozhodnutí při návrhu produkční infrastruktury. Srovnali js'
-      og_title: 'MLMU Online#16: Kvantitativní porovnání platforem pro produkční provoz ML modelů'
+      meta_description: 'Přednáška bude online na YouTube a v češtině!
+
+
+        Výběr vhodného nástroje pro provoz ML modelů je jedním z kritických rozhodnutí při návrhu produkční infrastruktury. Srovnali jsme tři nejpopulárnější platformy z pohledu výkonu, stability a použitelnosti. V prezentaci si povíme, na co jsme se při
+        testování zaměřili, za jakých podmínek jsme testovali a k čemu jsme došli.
+
+
+        Řečník: Jan Hajek, AI Researcher v biano.com
+
+        Spoluautoři: Hynek Davídek, AI Researcher v biano.com, a Václav Dohnal, AI Team leader a MLOps engineer v biano.com
+
+
+        Language: Czech
+
+
+        Machine Learning Meetups (MLMU) is an independent platform for people interested in Machine Learning, Information Retrieval, Natural Language Processing, Computer Vision, Pattern Recognition, Data Journalism, Artificial Intelligence, Agent Systems
+        and all the related topics. MLMU is a regular community meeting usually consisting of a talk, a discussion and subsequent networking. Except for Prague, MLMU also spread to Brno, Bratislava and Košice.
+
+
+        http://www.mlmu.cz/'
+      og_title: 'MLMU Online#16: Kvantitativní porovnání platforem pro produkční provoz ML modelů, Thu, Oct 14, 4:00 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/4/1/4/0/600_499336704.jpeg
       url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/281293821/
       ical:
