--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -107,8 +107,22 @@ series:
         dtstart: 2021-07-01 18:00:00+02:00
         dtend: 2021-07-01 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Sep 15, 2021, 5:00 PM: Hey designers! Let''s catch the last bits of summer sunlight and meet somewhere outdoors this time :)UX dinner is a meeting of the UX community in Brno. You can expect an in'
-      og_title: UX Picnic Brno in September
+      meta_description: 'Hey designers! Let''s catch the last bits of summer sunlight and meet somewhere outdoors this time :)
+
+
+        UX dinner is a meeting of the UX community in Brno. You can expect an informal dinner, discussing small design problems, an opportunity to find a mentor or a new project. We often discuss how to educate ourselves, what we as a community miss in
+        Brno and what we can do about it. And do not hesitate to come even if you do not have "UX" on your business card!
+
+
+        We will have a picnic this time so don''t forget to bring your blanket, food and some drinks! (In case you forgot, don''t worry, there''s a couple of places around the park with some food, too.)
+
+
+        UX Dinner je tradičné stretnutie UX komunity v Brne každý prvý (alebo druhý) týždeň v mesiaci. Možete čakať neformálne stretnutie brnenských UX dizajnérov pri večeri; priestor na rozoberanie drobných dizajnových problémov; hľadanie mentorov a projektov,
+        do ktorých sa dá zapojiť; diskutuje sa často o tom, ako sa vzdelávať, čo sledovať, čo nám ako komunite v Brne chýba. A určite môžete prísť aj keď nie ste "UX". :)
+
+
+        Tentoraz budeme mať piknik, tak si nezabudnite vziať nejakú deku, jedlo a niečo na pitie! (Ak by si náhodou zabudol, nevadí, v okolí je dosť veľa fajn podnikov.)'
+      og_title: UX Picnic Brno in September, Wed, Sep 15, 3:00 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/a/6/5/4/600_498822580.jpeg
       url: https://www.meetup.com/asociace-ux/events/280768687/
       ical:
@@ -132,8 +146,107 @@ series:
         dtstart: 2021-09-15 17:00:00+02:00
         dtend: 2021-09-15 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Oct 5, 2021, 6:00 PM: World Interaction Design Day is an annual event where we come together as a united global community to show how interaction design improves the human condition.This year we’'
-      og_title: 'IxDD Brno 2021: Solidarity & Transformation'
+      meta_description: 'World Interaction Design Day is an annual event where we come together as a united global community to show how interaction design improves the human condition.
+
+
+        This year we’ll look into topics: TRANSFORMATION AND SOLIDARITY - which are in the context of the global IXDD closely linked to the pandemic situation.
+
+        We’ll focus mainly on the concept of: Design in the Background - the areas most affected by covid events - such as education, healthcare, and travel. These have undergone the greatest transformations, but people still know little about all the
+        changes, that happened, challenges overcome, the initiatives and projects created and what they are trying to achieve.
+
+
+        *Admission fee is VOLUNTARY
+
+        (There will be QR codes and cash points in the area and the proceeds will go to our partner NGOs)
+
+
+        IMPORTANT UPDATE:
+
+        This time we’ll meet in-person for an offline event 🤩
+
+
+        ➡️ Necessary covid measures:
+
+        we''ll check your confirmation of: vaccination against covid 19/ PCR test not older 7 days/ antigen test not older 48 hours/ evidence of having contracted covid in the last 180 day + we''d like to ask you to wear a mask inside.
+
+        ——————
+
+        Agenda:
+
+        17:00. Doors open
+
+        18:00 Official IXDD introduction + short intro from our venue host
+
+        18:15 - 18:45 Anežka Muller - Učíme online, Česko Digital
+
+        Coffee&Cupcake break
+
+        18:55 - 19:25 Blanka&Otakar - VČAS app project and prevention, Loono
+
+        Coffee&Cupcake break
+
+        19.35 - 20:05 Jana Hřebecká - Start Again, Pábení
+
+        20:05 - 20:35 Adam Vodička, Anybody - Hotel that doesn''t exist
+
+        20:05 - free networking time + edu-point with practical prevention displays from Loono experts
+
+
+        + we can move to the bar together afterwards 🍹
+
+
+        ⭐ all talks are English only
+
+        ——————
+
+        1. Česko Digital - Project Učíme online fights for educational transformations
+
+        by Anežka Muller, Project & Support Coordinator, Česko.Digital
+
+
+        Učíme online was to help schools, teachers, parents and students to make the most of the remote education possibilities through technology. The current goal is to be a long-term driving force in the transformation of Czech education.
+
+
+        Anežka will walk you through the history and future of this project and what they have accomplished during their journey.
+
+
+        --
+
+
+        2. Loono - All about prevention and VČAS app design story
+
+        by Blanka Majnušová, Managing Director, and Otakar Hypš, Product Designer
+
+
+        Loono is the non-profit organisation, which focuses on educating the general public in the field of health and prevention and Blanka leads it on its mission. She has wide experience in the public health sector and has been with Loono for almost
+        three years.
+
+
+        Otakar is a freelance designer helping organisations define new products, improve services and provide better user experience. He leads a team of designers working on their app.
+
+
+        Blanka and Oto will share with you Loono goals, its’ journey and accomplishments for past years, especially will talk about their new community mobile app VČAS, that is going to disrupt the area where health insurance companies are failing. Long-term,
+        the app should become a hub for evidence-based knowledge of health related topics as well as a personalised motivator guiding the users toward improvements in their daily habits.
+
+
+        💥 As a bonus, thanks to Loono we’ll be able to chat with their dedicated educators about prevention and broaden our horizons even more.
+
+
+        --
+
+
+        3. Jana Hřebecká is a service designer who wants to create sustainable solutions with a positive impact on people as well as the planet
+
+
+        A child''s loss is an unimaginable event for every parent. Unfortunately, life brings these hard moments and it is extremely important who stands by the family when they hear the news, cope with the situation, and heal themselves. Jana will tell
+        you a story about the designer''s role in social innovation in the theme of perinatal loss (child''s death during the pregnancy or after the labor). This project was run by Unipa and funded by EU.
+
+
+        --
+
+
+        4. Adam Vodička, Anybody - (more in comments) ⬇️'
+      og_title: 'IxDD Brno 2021: Solidarity & Transformation, Tue, Oct 5, 4:00 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/c/4/3/d/600_499130237.jpeg
       url: https://www.meetup.com/asociace-ux/events/280942000/
       ical:
@@ -157,8 +270,48 @@ series:
         dtstart: 2021-10-05 18:00:00+02:00
         dtend: 2021-10-05 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Oct 4, 2021, 6:30 PM: Link na livestream - https://youtu.be/2_wuN5b8EHoSlido na otázky řečníkům - https://app.sli.do/event/c8xemupqO tom, že není testování jako testování se přesvědčíme na říjnov'
-      og_title: 'UX Monday: Uživatelské testování a čeho se vyvarovat'
+      meta_description: 'Link na livestream - https://youtu.be/2_wuN5b8EHo
+
+        Slido na otázky řečníkům - https://app.sli.do/event/c8xemupq
+
+
+        O tom, že není testování jako testování se přesvědčíme na říjnovém UX Monday. S Michalem Vojákem a jeho kolegyní Luciou Marcinkovou z Designdev se totiž podíváme zblízka na testování použitelnosti webů i aplikací a pokusíme se při tom zaměřit na
+        časté chyby a zkreslení, kterých se výzkumníci na svých respondentech dopouštějí.
+
+
+        Od kolika respondentů se vyplatí testy provádět? V jakých chvílích má smysl k testování přistoupit? Je lepší se častěji ptát nebo spíš nechat respondenta pracovat samostatněji? Co na nástroje je dobré při testech použít? A jak vypadá takové testování
+        v praxi? To jsou jen některé oblasti, o které se pokusíme večer otřít. Nemalou část večera věnujeme také zkušenostem vás, posluchačů v publiku a u počítačových obrazovek.
+
+
+        HYBRIDNÍ MODEL: zprovozníme Youtube live-stream a pro prvních 45 registrovaných zajistíme také místo v prostorách našeho partnera MSD (tentokrát již ve staré známé velké přednáškovce). Je to zatím maximum, co nám Covid dovolí, proto prosím osobně
+        zvažte, jestli skutečně plánujete přijít, ať využijeme offline kapacitu naplno. Na místě budeme kontrolovat proočkovanost/otestovanost, zajistíme nanoroušky a uděláme maximum pro bezpečný průběh akce. Těšíme se na viděnou!
+
+
+        18:00 – Prezence, občerstvení, networking.
+
+        18:30 – Začátek programu + livestream.
+
+        20:15 – Pivo za rohem.
+
+
+        ---
+
+
+        Michal Voják řídí jako Product Design Lead návrhové oddělení v Designdev. Propaguje zavádění Product Discovery do firem a vede startup s názvem userUP, který má za cíl pomoc firmám s Product discovery.
+
+
+        Dominik Slavík je UX designer a analytický typ člověka. Nastavuje hypotézy, hledá oporu v datech, výzkumech, myslí na uživatele.
+
+
+        ---
+
+
+        Vstupné 100 Kč, členové Asociace UX zdarma.
+
+        Offline kapacita 45 osob - registrujte se jen pokud plánujete přijít.
+
+        Youtube livestream link pár minut před startem zde + na slacku Asociace UX.'
+      og_title: 'UX Monday: Uživatelské testování a čeho se vyvarovat, Mon, Oct 4, 4:30 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/7/3/e/d/600_499109677.jpeg
       url: https://www.meetup.com/asociace-ux/events/281045132/
       ical:
@@ -182,8 +335,14 @@ series:
         dtstart: 2021-10-04 18:30:00+02:00
         dtend: 2021-10-04 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 7, 2021, 6:00 PM: Are you a UX writer, UX designer, UX researcher, or are just UX curious? Come on out for the next Prague UX Writers meetup!If you have something you want to talk about or sh'
-      og_title: PRAGUE UX WRITERS MEETUP Vol. 22 - October
+      meta_description: 'Are you a UX writer, UX designer, UX researcher, or are just UX curious? Come on out for the next Prague UX Writers meetup!
+
+
+        If you have something you want to talk about or show the group (something you''ve worked on, read about, or are excited about), please let me know!
+
+
+        Come by for beers 🍻, UX chats 💭, and more! 🔥🚀'
+      og_title: PRAGUE UX WRITERS MEETUP Vol. 22 - October, Thu, Oct 7, 4:00 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/4/e/4/a/600_499160042.jpeg
       url: https://www.meetup.com/asociace-ux/events/281102718/
       ical:
