--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -56,8 +56,40 @@ series:
         dtstart: 2021-08-12 17:00:00+02:00
         dtend: 2021-08-12 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 14, 2021, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Oct 14, 2021, 5:00 PM'
+      meta_description: 'Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, pojďme se pochlubit jak je to super!!
+
+        Power Automate (Flow), Power Apps, Power BI a Power Virtual Agents.
+
+
+        Program:
+
+        Ukázky novinek z oblasti PP a reálných scénářů
+
+        Volná diskuze a případné virtuální pivo
+
+
+        Lokalita:
+
+        ONLINE
+
+
+        Jazyk:
+
+        čeština
+
+
+        Občerstvení:
+
+        Vlastní
+
+
+        Úroveň:
+
+        100-300
+
+
+        Tak si prosím naplánujte čas ve svých kalendářích a připojte se.'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Oct 14, 3:00 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsyccnbsb/
       ical:
@@ -81,8 +113,40 @@ series:
         dtstart: 2021-10-14 17:00:00+02:00
         dtend: 2021-10-14 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 11, 2021, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Nov 11, 2021, 5:00 PM'
+      meta_description: 'Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, pojďme se pochlubit jak je to super!!
+
+        Power Automate (Flow), Power Apps, Power BI a Power Virtual Agents.
+
+
+        Program:
+
+        Ukázky novinek z oblasti PP a reálných scénářů
+
+        Volná diskuze a případné virtuální pivo
+
+
+        Lokalita:
+
+        ONLINE
+
+
+        Jazyk:
+
+        čeština
+
+
+        Občerstvení:
+
+        Vlastní
+
+
+        Úroveň:
+
+        100-300
+
+
+        Tak si prosím naplánujte čas ve svých kalendářích a připojte se.'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Nov 11, 4:00 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsyccpbpb/
       ical:
@@ -106,8 +170,40 @@ series:
         dtstart: 2021-11-11 17:00:00+01:00
         dtend: 2021-11-11 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Dec 9, 2021, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, po'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Dec 9, 2021, 5:00 PM'
+      meta_description: 'Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, pojďme se pochlubit jak je to super!!
+
+        Power Automate (Flow), Power Apps, Power BI a Power Virtual Agents.
+
+
+        Program:
+
+        Ukázky novinek z oblasti PP a reálných scénářů
+
+        Volná diskuze a případné virtuální pivo
+
+
+        Lokalita:
+
+        ONLINE
+
+
+        Jazyk:
+
+        čeština
+
+
+        Občerstvení:
+
+        Vlastní
+
+
+        Úroveň:
+
+        100-300
+
+
+        Tak si prosím naplánujte čas ve svých kalendářích a připojte se.'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Dec 9, 4:00 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsyccqbmb/
       ical:
@@ -131,8 +227,40 @@ series:
         dtstart: 2021-12-09 17:00:00+01:00
         dtend: 2021-12-09 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Jan 13, 2022, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Jan 13, 2022, 5:00 PM'
+      meta_description: 'Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, pojďme se pochlubit jak je to super!!
+
+        Power Automate (Flow), Power Apps, Power BI a Power Virtual Agents.
+
+
+        Program:
+
+        Ukázky novinek z oblasti PP a reálných scénářů
+
+        Volná diskuze a případné virtuální pivo
+
+
+        Lokalita:
+
+        ONLINE
+
+
+        Jazyk:
+
+        čeština
+
+
+        Občerstvení:
+
+        Vlastní
+
+
+        Úroveň:
+
+        100-300
+
+
+        Tak si prosím naplánujte čas ve svých kalendářích a připojte se.'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Jan 13, 4:00 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsydccbrb/
       ical:
@@ -156,8 +284,40 @@ series:
         dtstart: 2022-01-13 17:00:00+01:00
         dtend: 2022-01-13 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Feb 10, 2022, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Feb 10, 2022, 5:00 PM'
+      meta_description: 'Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, pojďme se pochlubit jak je to super!!
+
+        Power Automate (Flow), Power Apps, Power BI a Power Virtual Agents.
+
+
+        Program:
+
+        Ukázky novinek z oblasti PP a reálných scénářů
+
+        Volná diskuze a případné virtuální pivo
+
+
+        Lokalita:
+
+        ONLINE
+
+
+        Jazyk:
+
+        čeština
+
+
+        Občerstvení:
+
+        Vlastní
+
+
+        Úroveň:
+
+        100-300
+
+
+        Tak si prosím naplánujte čas ve svých kalendářích a připojte se.'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Feb 10, 4:00 PM | Meetup'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsydcdbnb/
       ical:
