--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -6,8 +6,19 @@ series:
     image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
   events:
   - meetupcom:
-      meta_description: 'Thu, Sep 30, 2021, 6:30 PM: Let’s code together, whether a complete beginner or seasoned developer come and have a coffee and sharesome knowledge.Bring a laptop and a sense of adventurePlease note: ev'
-      og_title: 'Coding Session - Web Dev '
+      meta_description: 'Let’s code together, whether a complete beginner or seasoned developer come and have a coffee and share
+
+        some knowledge.
+
+
+        Bring a laptop and a sense of adventure
+
+
+        Please note: everyone is most welcome to join however this event will be conducted in English.
+
+
+        Please support the event location host and a local business, Coffice. By purchasing your drinks from them.'
+      og_title: Coding Session - Web Dev , Thu, Sep 30, 4:30 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/280899375/
       ical:
@@ -31,8 +42,17 @@ series:
         dtstart: 2021-09-30 18:30:00+02:00
         dtend: 2021-09-30 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 7, 2021, 6:30 PM: Let''s code together and build something interesting. Work on your own project or join in on the group project.Bring a laptop and a sense of adventure, all levels welcome.Ple'
-      og_title: 'Coding Session '
+      meta_description: 'Let''s code together and build something interesting. Work on your own project or join in on the group project.
+
+
+        Bring a laptop and a sense of adventure, all levels welcome.
+
+
+        Please note: everyone is most welcome to join however this event will be conducted in English.
+
+
+        Please support the event location host and a local business, Kolektor. By purchasing your food and/or drinks from them.'
+      og_title: Coding Session , Thu, Oct 7, 4:30 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/a/b/0/600_499262736.jpeg
       url: https://www.meetup.com/the-social-programers/events/281199410/
       ical:
@@ -56,8 +76,8 @@ series:
         dtstart: 2021-10-07 18:30:00+02:00
         dtend: 2021-10-07 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 14, 2021, 6:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
-      og_title: 'Coding session - V3 '
+      meta_description: Let's have a beer and code together and build something interesting. Work on your own project or join in on the group project.
+      og_title: Coding session - V3 , Thu, Oct 14, 4:30 PM | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/281374093/
       ical:
